# ONNX-example-linux

./: CMakeLists.txt  README.md  onnx_mnist.cpp
